[project]
name = "gitactive"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Orion", email = "orionwatson27@yahoo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer", "requests"]

[project.urls]
Homepage = "https://github.com/LegendaryPredz/GitAcitve"

[project.scripts]
gitactive = "gitactive:app"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["gitactive"]

[tool.ruff]
line-length = 120
select = ["I"]
fix = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.3.2"]
